[package]
name = "pixlib"
version = "0.1.0"
edition = "2021"

[dependencies]
cdfs = { git = "https://github.com/Dove6/cdfs.git", branch = "fix/threading" }
pixlib_formats = { path = "../pixlib_formats" }
pixlib_parser = { path = "../pixlib_parser" }
codepage-strings = "1"
bevy = { version = "0.13", default-features = false, features = [
    "bevy_asset",
    # "bevy_audio",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "multi-threaded",
    # "bevy_ci_testing",
    "bmp",
    # "file_watcher",
    "jpeg",
    "dynamic_linking",
] }
bevy_kira_audio = { version = "0.19", default-features = false, features = [
    "wav",
] }
regex = "1.10"
zip = { version = "2.1", default-features = false, features = [
    "deflate",
    "time",
] }
