[package]
name = "pixlib"
version = "0.1.0"
edition = "2021"

[dependencies]
pixlib_formats = { path = "../pixlib_formats" }
pixlib_parser = { path = "../pixlib_parser" }
codepage-strings = "1"
bevy = { version = "0.14", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_sprite",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "default_font",
    "webgl2",
    "multi_threaded",
] }
bevy_kira_audio = { version = "0.20", default-features = false, features = [
    "wav",
] }
regex = "1.10"
log = "0.4"
chrono = "0.4"
thiserror = "1.0"
lazy_static = "1.4"

[target.'cfg(target_family = "wasm")'.dependencies]
bevy_web_file_drop = { git = "https://github.com/Dove6/bevy_web_file_drop.git", branch = "fix/bevy-0.14-asset-reader-trait" }
