[package]
name = "pixlib_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixlib_formats = { path = "../pixlib_formats" }
lazy_static = "1.4"
anyhow = "1.0"
thiserror = "1.0"
lalrpop-util = { version = "0.20", default-features = false, features = [
    "lexer",
    "unicode",
] }
chrono = "0.4"
regex = "1.10"
itertools = "0.12"
string-interner = "0.17"
xxhash-rust = { version = "0.8", default-features = false, features = ["xxh3"] }
keyboard-types = "0.7"
rand = "0.8"
libm = "0.2"
log = "0.4"
cdfs = { git = "https://github.com/Dove6/cdfs.git", branch = "fix/threading" }
zip = { version = "2.1", default-features = false, features = [
    "deflate",
    "time",
] }
image = "0.25"

[build-dependencies]
lalrpop = "0.20"

[dev-dependencies]
env_logger = "0.11"
goldenfile = "1.7"
proptest = "1.4"
similar-asserts = "1.6"
test-case = "3.3"
